--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-    <link href="/cacheatsheet/styles.css" rel="stylesheet">
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
     <!--Heading-->
