--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
 
     <!--CSS Section-->
-    <img src="./Images/CSS3_logo_and_wordmark.png"/>
+    <img src="./CSS3_logo_and_wordmark.png"/>
     <div class="css">
         <table class="css-table">
         <!--Table Header Sections-->
